# qdemo.jsoo-express

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .ocamlformat  .prettierrc  LICENSE  Makefile  README.md  dune  dune-project  jest.config.js  kxcdev-qdemo-jsoo-express.opam  package.json  tsconfig.base.json  tsconfig.spec.json
apps/main-entry/: dune  dune-deps.inc  tsconfig.app.json  tsconfig.module.json
apps/main-entry/e2e-api/: main.spec.ts
apps/main-entry/mlsrc/: dune  server_main.bc.d.ts  server_main.ml  server_main.spec.ts
apps/main-entry/src/: main.ts
apps/main-entry/src/lib/: ping-pong.spec.ts  ping-pong.ts
scripts/: with-tempdir.sh
scripts/ci/: print_env.sh
vendors/: opstic
