(executables
 (names server_main)
 (libraries
  prr
  kxclib
  kxclib.jsoo)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes byte js)
 (flags
  (:standard
   -open
   Kxclib)))

(env

 (dev
  (js_of_ocaml
   (flags
    ((:standard \ --source-map-inline --pretty)
     --source-map
     --target-env
     browser ;; note that this is intentional even when we target nodejs
     --no-inline))
   (link_flags
    ((:standard \ --source-map-inline --pretty)
     --source-map))))

 (release
  (js_of_ocaml
   (flags
    ((:standard \ --source-map-inline --pretty)
     --no-source-map
     --target-env
     browser ;; note that this is intentional even when we target nodejs
     --opt=1))
   (link_flags
    ((:standard \ --source-map-inline --pretty)))
   (compilation_mode whole_program))))
